<resources>
    <string name="app_name">Dynamis</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="logo_dynamis">Logo Dynamis</string>
    <string name="registro">Registro</string>
    <string name="listar">Listar</string>
    <string name="actividad">Actividad</string>
    <string name="pagos">Pagos</string>
    <string name="todo">TODO</string>
    <string name="socios">Socios</string>
    <string name="no_socios">No Socios</string>
    <string name="registrar_socio_nuevo">Registrar Socio Nuevo</string>
    <string name="modificar_o_eliminar_registros">Modificar o Eliminar Registros</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">apellido</string>
    <string name="Apellido">Apellido</string>
    <string name="_123456789">123456789</string>
    <string name="ficha_inscripci_n">Ficha Inscripción</string>
    <string name="dd_mm_aaaa">dd/mm/aaaa</string>
    <string name="foto">FOTO</string>
    <string name="logo_de_la_app">Logo de la aplicación</string>
    <string name="boton_de_ayuda">Botón de ayuda</string>
    <string name="pago">PAGO</string>
    <string name="_5000">$5000</string>
    <string name="cuota_inicial">Cuota Inicial</string>
    <string name="registrar_nuevo_socio">REGISTRAR NUEVO SOCIO</string>
    <string name="calle_falsa_123">Calle Falsa 123</string>
    <string name="apto_m_dico">Apto Médico</string>
    <string name="ingresar">INGRESAR</string>
    <string name="limpiar">LIMPIAR</string>
    <string name="modificar_registros_socios">MODIFICAR REGISTROS SOCIOS</string>
    <string name="subir_foto">SUBIR FOTO</string>
    <string name="ver_carnet">VER CARNET</string>
    <string name="guardar">GUARDAR</string>
    <string name="gestion_no_socios">GESTION NO SOCIOS</string>
    <string name="registrar_no_socio_nuevo">Registrar No Socio Nuevo</string>
    <string name="registrar_nuevo_no_socio">REGISTRAR NUEVO NO SOCIO</string>
    <string name="registro_de_pagos">Registro de Pagos</string>
    <string name="pagar_cuota">Pagar Cuota</string>
    <string name="pagar_actividad">Pagar Actividad</string>
    <string name="pago_de_cuota">PAGO DE CUOTA</string>
    <string name="pago_de_actividad">PAGO DE ACTIVIDAD</string>
    <string name="listar_vencimientos">LISTAR VENCIMIENTOS</string>
    <string name="listar_no_socios">LISTAR NO SOCIOS</string>
    <string name="listar_socios">LISTAR SOCIOS</string>
        <string name="navbar_back_description">Volver atrás</string>
        <string name="navbar_menu_description">Menú de Sesión</string>
    <string name="vencimientos_de_hoy">Vencimientos de hoy</string>
    <string name="eliminar">Eliminar</string>
    <string name="Documento">Documento</string>
    <string name="cuota">Precio cuota</string>
    <string name="fecha_pago">Fecha de pago 10/10/2025</string>
    <string name="precio_actividad">Precio actividad</string>
</resources>