<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/background"
    tools:context=".ModificarEliminarRegistro"

    app:layout_constraintEnd_toEndOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/modificar_eliminar_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <include
        layout="@layout/navbar_superior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/txtModificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/modificar_registros_socios"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="258dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="180dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/apellido"
        android:layout_width="258dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="260dp"
        android:ems="10"
        android:hint="@string/Apellido"
        android:inputType="text"
        android:textAlignment="center"

        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerDocumento"
        android:layout_width="258dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="344dp"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="258dp"
        android:layout_height="52dp"
        android:layout_marginTop="424dp"
        android:ems="10"
        android:hint="@string/_123456789"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtFechaNacimiento"
        android:layout_width="258dp"
        android:layout_height="52dp"
        android:layout_marginTop="500dp"
        android:ems="10"
        android:hint="@string/dd_mm_aaaa"
        android:inputType="date"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/direccion"
        android:layout_width="258dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="572dp"
        android:ems="10"
        android:hint="@string/calle_falsa_123"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSubirFoto"
        android:layout_width="262dp"
        android:layout_height="72dp"
        android:layout_marginTop="660dp"
        android:backgroundTint="@color/midnightblue"
        android:text="@string/subir_foto"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnVerCarnet"
        android:layout_width="262dp"
        android:layout_height="72dp"
        android:layout_marginTop="760dp"
        android:backgroundTint="@color/sagegreen"
        android:text="@string/ver_carnet"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="167dp"
        android:layout_height="86dp"
        android:layout_marginTop="896dp"
        android:backgroundTint="@color/midnightblue"
        android:text="@string/guardar"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="167dp"
        android:layout_height="86dp"
        android:layout_marginTop="896dp"
        android:backgroundTint="@color/midnightblue"
        android:text="@string/limpiar"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.939"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>