<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imgDynamis"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/logo_dynamis"
        app:srcCompat="@drawable/dynamislogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="300dp"
        android:layout_height="61dp"
        android:autofillHints=""
        android:hint="@string/usuario"
        android:inputType="textPersonName|textNoSuggestions"
        android:padding="12dp"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/imgDynamis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="300dp"
        android:layout_height="61dp"
        android:autofillHints=""
        android:hint="@string/contrase_a"
        android:inputType="textPassword|textNoSuggestions"        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/txtUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:importantForAutofill="no"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="296dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/midnightblue"
android:textColor="@color/white"
        android:text="@string/iniciar_sesi_n"
        app:layout_constraintTop_toBottomOf="@id/txtPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>