<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/background"
    tools:context=".ModificarEliminarRegistroNoSocioActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/modificar_eliminar_registro_no_socio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp">

        <include
            android:id="@+id/navbar"
            layout="@layout/activity_navbar_subpage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/midnightblue"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/nombre"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="24dp"
            android:hint="@string/nombre"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnAtras" />

        <EditText
            android:id="@+id/apellido"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:hint="@string/Apellido"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/nombre"
            app:layout_constraintStart_toStartOf="@id/nombre"
            app:layout_constraintTop_toBottomOf="@id/nombre" />

        <Spinner
            android:id="@+id/spinnerDocumento"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:spinnerMode="dialog"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/nombre"
            app:layout_constraintStart_toStartOf="@id/nombre"
            app:layout_constraintTop_toBottomOf="@id/apellido" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:hint="@string/_123456789"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/nombre"
            app:layout_constraintStart_toStartOf="@id/nombre"
            app:layout_constraintTop_toBottomOf="@id/spinnerDocumento" />

        <EditText
            android:id="@+id/txtFechaNacimiento"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:hint="@string/dd_mm_aaaa"
            android:inputType="date"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/nombre"
            app:layout_constraintStart_toStartOf="@id/nombre"
            app:layout_constraintTop_toBottomOf="@id/editTextNumber" />

        <EditText
            android:id="@+id/direccion"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:hint="@string/calle_falsa_123"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/nombre"
            app:layout_constraintStart_toStartOf="@id/nombre"
            app:layout_constraintTop_toBottomOf="@id/txtFechaNacimiento" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVerCarnet"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/sagegreen"
            android:text="@string/ver_carnet"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_carnet"
            app:iconTint="@color/white"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toEndOf="@id/nombre"
            app:layout_constraintStart_toStartOf="@id/nombre"
            app:layout_constraintTop_toBottomOf="@id/direccion" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGuardar"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/midnightblue"
            android:text="@string/guardar"
            android:textSize="18sp"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_save"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toStartOf="@+id/btnLimpiar"
            app:layout_constraintStart_toStartOf="@id/nombre"
            app:layout_constraintTop_toBottomOf="@id/btnVerCarnet" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLimpiar"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/midnightblue"
            android:text="@string/limpiar"
            android:textSize="18sp"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_limpiar"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toEndOf="@id/nombre"
            app:layout_constraintStart_toEndOf="@+id/btnGuardar"
            app:layout_constraintTop_toTopOf="@id/btnGuardar" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEliminar"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/eliminar"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_delete"
            app:iconTint="@color/white"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toEndOf="@id/nombre"
            app:layout_constraintStart_toStartOf="@id/nombre"
            app:layout_constraintTop_toBottomOf="@id/btnGuardar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>